--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lazySizes": "node "
+    "lazySizes": "node ",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "RojoRevolution <rojo@rojorevolution.com> (https://rojorevolution.com)",
